Clean up and add some web page views

--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <script src="https://unpkg.com/htmx.org@1.9.2" integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h" crossorigin="anonymous"></script>
-    <title>{% block title %}My Site{% endblock%}</title>
+    <link rel="stylesheet" href="https://unpkg.com/missing.css@1.0.9/dist/missing.min.css">
+    <title>{% block title %}Buoy Data Explorer{% endblock%}</title>
   </head>
   <body>
     <div class="main_content">
